Test to trigger log message

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,6 +40,11 @@ release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>February 14, 1998</b></dt>
+<dd>
+  The egcs web pages are now supported by the egcs hardware, and have
+  been augmented with a number of automated tools.
+</dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
   Stanford has volunteered to host a high speed mirror for egcs.  This
