--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,8 @@ release.
 <dt><b>February 14, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by the egcs hardware, and have
-  been augmented with a number of automated tools.  Remote editing...
+  been augmented with a number of automated tools.  Remote
+  editing...will this work?
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
