testing remote updating 4

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,7 +44,7 @@ release.
 <dd>
   The egcs web pages are now supported by the egcs hardware, and have
   been augmented with a number of automated tools.  Remote
-  editing...will this work?
+  editing...will this work? 4
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
