cosmetic tweaks, add reference to cvsweb

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -14,6 +14,9 @@ available readonly to the public at large.
 waiting for periodic snapshots.  You'll even be able to check out the
 release branch(es) since they also live in the CVS repository.
 
+<p>If you would like to browse the CVS history online via your web
+browser it is available via <a href="/cgi-bin/cvsweb">cvsweb</a>.
+
 <p>If you don't already have CVS, we recommend you pick up a recent copy from
 cyclic software <a href="http://www.cyclic.com"> at http://www.cyclic.com</a>.
 
@@ -57,14 +60,17 @@ cvs -z 9 update -regcs_ss_yymmdd
 <p>Also note that you may wish to review the CVS manual which is provided
 in texinfo form in the CVS sources.
 <a href="http://www.cyclic.com/cvs/doc-blandy.html">
-http://www.cyclic.com/cvs/doc-blandy.html</a> contains
-a link to an reasonably simple introduction to CVS.  Links to some books
-can be found on <a href="http://www.cyclic.com"> http://www.cyclic.com</a>.
+http://www.cyclic.com/cvs/doc-blandy.html</a> contains a link to an
+reasonably simple introduction to CVS, which is available in html as
+<a
+href="http://www.loria.fr/~molli/cvs/doc/cvs_toc.html">http://www.loria.fr/~molli/cvs/doc/cvs_toc.html</a>.
+Links to some books can be found on <a href="http://www.cyclic.com">
+http://www.cyclic.com</a>.
 
 
 
 <hr>
-<i>Last modified on February 8, 1998.</i>
+<i>Last modified on February 14, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
