--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,27 +13,26 @@ compiler.
 <p>A bunch of us (including Fortran, Linux, Intel and RTEMS hackers)
 have gotten together to return to the fundamental idea that code
 visibility and submissions from the net are vital to the long term
-improvement of the compiler. We are going to integrate variations and
-patches to GCC that are floating around, including some front-ends like
-g77 (Fortran). We are going to work closely with the free OS'es (e.g.
-Linux, *BSD) where GCC is a critical piece of infrastructure.  We
-invite you to join us.
+improvement of the compiler.  We are integrating variations and
+patches to GCC that are floating around, including some front-ends
+like g77 (Fortran).  We are going to work closely with the free OS'es
+(e.g.  Linux, *BSD) where GCC is a critical piece of infrastructure.
+We invite you to join us.
 
-<p>We want to work closely with contributors to help and encourage them
-to submit their changes for inclusion in egcs. We'll make regular
-snapshots publicly available. We are providing
-<a href="cvs.html"> readonly access via remote-CVS </a>
-to anyone on the net, and will provide read-write access to
-certain external developers, in the manner already used in other Free
-Software projects on the net.  All code will continue to be <a
-href="contribute.html">assigned to the FSF</a> exactly as before
-and will be make available to the gcc2 maintainers for ultimate inclusion
-into the gcc2 tree.
+<p>We want to work closely with contributors to help and encourage
+them to submit their changes for inclusion in egcs. We make regular <a
+href="#snapshots">snapshots</a> publicly available. We provide <a
+href="cvs.html"> readonly access via remote-CVS </a> to anyone on the
+net, and read-write access to certain external developers in the
+manner already used in other Free Software projects on the net.  All
+code continues to be <a href="contribute.html">assigned to the FSF</a>
+exactly as before and is available to the gcc2 maintainers for
+ultimate inclusion into the gcc2 tree.
 
-<p>We will provide regular, high quality releases. We want those
-releases to work well on a variety of native (including linux) and
-cross targets.  <a href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current
-release.
+<p>We will provide regular, high quality <a
+href="#releases">releases</a>. We want those releases to work well on
+a variety of native (including linux) and cross targets.  <a
+href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
@@ -42,9 +41,10 @@ release.
 <dl>
 <dt><b>February 14, 1998</b></dt>
 <dd>
-  The egcs web pages are now supported by the egcs hardware, and have
-  been augmented with a number of automated tools.  Remote
-  editing...will this work? 6
+  The egcs web pages are now supported by egcs project hardware, and have
+  been augmented with a number of automated tools, including web
+  interfaces to cvs and prms, and a powerful search engine, webglimpse.
+  A PRMS database has been added for managing submitted patches.
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
@@ -106,25 +106,25 @@ with a message body of
 <tt>unsubscribe </tt> <i>listname</i> <i>your-email-address</i>.
 
   <p>Web archives for all three mailing lists are on-line;
-<a href="/ml/egcs/">egcs</a>,
-<a href="/ml/egcs-announce/">egcs-announce</a>,
+<a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
+<a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
 and
-<a href="/ml/egcs-bugs/">egcs-bugs</a>.
+<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>.
 
 
-<h2>SNAPSHOTS</h2>
+<h2><a name=snapshots>SNAPSHOTS</h2>
 
-<p>Snapshots will be made weekly and put up for ftp.  If you are going
+<p>Snapshots are generated weekly and put up for ftp.  If you are going
 to mess with snapshots, you should definitely be subscribed to the
-<tt>egcs</tt> mailing list.  Note 
+<tt>egcs</tt> mailing list.
 
 <p>The snapshots are available from 
 <a href="ftp://ftp.cygnus.com/pub/egcs/snapshots/index.html">
 ftp.cygnus.com:/pub/egcs/snapshots</a>.
 
-<h2>RELEASES</h2>
+<h2><a name="releases">RELEASES</h2>
 
-<p>Releases are currently available from <a
+<p>Releases are available from <a
 href="ftp://ftp.cygnus.com/pub/egcs/releases/index.html">
 ftp.cygnus.com:/pub/egcs/releases</a>.
 
@@ -171,7 +171,7 @@ features, documentation updates, web page improvements, etc.  Look
 to the egcs project.
 
 <hr>
-<i>Last modified on February 7, 1998.</i>
+<i>Last modified on February 14, 1998.</i>
 
 </body>
 </html>
