--- a/htdocs/buildstat.html
+++ b/htdocs/buildstat.html
@@ -138,5 +138,7 @@ conflicting g++ test results ont his platform.
 <p>
 <i>Last modified on December 5, 1997.</i>
 
+<!--GH_SEARCH-->
+<!--GH_END-->
 </body>
 </html>
