--- a/htdocs/caveats.html
+++ b/htdocs/caveats.html
@@ -39,5 +39,7 @@
 <p><a href="">Return to the egcs home page</a>
 <p><i>Last modified:  January 17, 1997</i>
 
+<!--GH_SEARCH-->
+<!--GH_END-->
 </body>
 </html>
