--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -552,5 +552,7 @@ libstdc++/libio which are included in the egcs distribution.
 <p><a href="index.html">Return to the egcs home page</a>
 <p><i>Last modified:  February 7, 1998</i>
 
+<!--GH_SEARCH-->
+<!--GH_END-->
 </body>
 </html>
