--- a/htdocs/features.html
+++ b/htdocs/features.html
@@ -45,5 +45,7 @@
 <p><a href="">Return to the egcs home page</a>
 <p><i>Last modified:  December 8, 1997</i>
 
+<!--GH_SEARCH-->
+<!--GH_END-->
 </body>
 </html>
