--- a/htdocs/fsf-forms/copyrights.html
+++ b/htdocs/fsf-forms/copyrights.html
@@ -169,5 +169,7 @@ will work with a lawyer to decide what to do.</STRONG>
 <p><a href="/egcs/">Return to the egcs home page</a>
 
 <HR>
+<!--GH_SEARCH-->
+<!--GH_END-->
 </BODY>
 </HTML>
