--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -39,12 +39,10 @@ href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
-<dt><b>February 14, 1998</b></dt>
+<dt><b>February 26, 1998</b></dt>
 <dd>
-  The egcs web pages are now supported by egcs project hardware, and have
-  been augmented with a number of automated tools, including web
-  interfaces to cvs and prms, and a powerful search engine, webglimpse.
-  A PRMS database has been added for managing submitted patches.
+  The egcs web pages are now supported by egcs project hardware and
+  are searchable with webglimpse.
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
@@ -173,5 +171,31 @@ to the egcs project.
 <hr>
 <i>Last modified on February 14, 1998.</i>
 
+<!--GH_SEARCH-->
+<hr>
+<center>
+<table border=5><tr border=0>
+<td align=center valign=middle>
+   <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=http://egcs-www.cygnus.com/egcs/index.html/.glimpse-eye.jpg alt="WG" align=middle width=60 height=34></A>
+   <br>
+   <font size=-3>
+   <a href="http://glimpse.cs.arizona.edu/webglimpse">WebGlimpse</a>
+   </font>
+</td>
+<td> 
+   <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs/egcs">
+   <INPUT NAME=query size=20>
+   <INPUT TYPE=submit VALUE="Search">
+   <INPUT name=file type=hidden value="/egcs/carton/www/wwwdocs/htdocs/egcs/index.html">
+   <a href="/cgi-bin/webglimpse-fullsearch/egcs/carton/www/wwwdocs/htdocs/egcs?file=/egcs/carton/www/wwwdocs/htdocs/egcs/index.html">Search Options</a>
+</td></tr>
+<tr><td colspan=2>
+Search:	
+<INPUT TYPE=radio NAME=scope VALUE=neighbor CHECKED>
+The neighborhood of this page
+<INPUT TYPE=radio NAME=scope VALUE=full>The full archive
+</td></tr></form></table></center><hr>
+
+<!--GH_END-->
 </body>
 </html>
