--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -40,6 +40,8 @@ a bug report.
 
 <hr>
 <a href="../index.html">Return to the egcs home page</a>
+<!--GH_SEARCH-->
+<!--GH_END-->
 </body>
 </html>
 <hr>
