Tweak location of main ftp server.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -250,7 +250,7 @@ buggy assembler.
 <br><a href="ftp://tsx-11.mit.edu/pub/linux/packages/GCC/binutils-2.8.1.0.19.bin.tar.gz"> binutils-2.8.1.0.19 x86 binary for libc5</a>
 <br><a href="ftp://tsx-11.mit.edu/pub/linux/packages/GCC/binutils-2.8.1.0.19.glibc.bin.tar.gz"> binutils-2.8.1.0.19 x86 binary for glibc2</a>
 Or, you can try a
-<a href="ftp://ftp.cygnus.com/pub/egcs/infrastructure/gas-970915.tar.gz"> binutils snapshot</a>; however, be aware that the binutils snapshot is untested
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/gas-970915.tar.gz"> binutils snapshot</a>; however, be aware that the binutils snapshot is untested
 and may not work (or even build).  Use it at your own risk.
 
 <hr>
@@ -305,7 +305,7 @@ not recreate it.
 <p>If you get a message about unable to find "standard.exp" when trying to
 run the egcs testsuites, then your dejagnu is too old to run the egcs tests.
 You will need to get a newer version of dejagnu; we've made a
-<a href="ftp://ftp.cygnus.com/pub/egcs/infrastructure/dejagnu-971222.tar.gz">
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-971222.tar.gz">
 dejagnu snapshot</a> available until a new version of dejagnu can be released.
 
 <hr>
@@ -550,7 +550,7 @@ libstdc++/libio which are included in the egcs distribution.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  February 7, 1998</i>
+<p><i>Last modified:  February 26, 1998</i>
 
 <!--GH_SEARCH-->
 <!--GH_END-->
