--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,7 +66,7 @@ href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 <dt><b>August 15, 1997</b></dt>
 <dd>
   The egcs project is <a href="announcement.html">announced publicly</a>
-  and the first <a href="ftp://ftp.cygnus.com/pub/egcs/snapshots/index.html">
+  and the first <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
   snapshot</a>
   is put on-line.
 </dd>
@@ -117,14 +117,14 @@ to mess with snapshots, you should definitely be subscribed to the
 <tt>egcs</tt> mailing list.
 
 <p>The snapshots are available from 
-<a href="ftp://ftp.cygnus.com/pub/egcs/snapshots/index.html">
-ftp.cygnus.com:/pub/egcs/snapshots</a>.
+<a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
+egcs.cygnus.com:/pub/egcs/snapshots</a>.
 
 <h2><a name="releases">RELEASES</h2>
 
 <p>Releases are available from <a
-href="ftp://ftp.cygnus.com/pub/egcs/releases/index.html">
-ftp.cygnus.com:/pub/egcs/releases</a>.
+href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
+egcs.cygnus.com:/pub/egcs/releases</a>.
 
 
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
@@ -169,7 +169,7 @@ features, documentation updates, web page improvements, etc.  Look
 to the egcs project.
 
 <hr>
-<i>Last modified on February 14, 1998.</i>
+<i>Last modified on February 26, 1998.</i>
 
 <!--GH_SEARCH-->
 <hr>
