--- a/htdocs/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0.1.html
@@ -117,7 +117,7 @@ will update those pages as new information becomes available.
 <p>Update: Big thanks to Stanford for providing a high speed link for
 downloading egcs (go.cygnus.com)!
 
-<p><a href="ftp://ftp.cygnus.com/pub/egcs/releases/index.html">
+<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.0.1
 from ftp.cygnus.com (USA California)</a>
 <p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
@@ -135,7 +135,7 @@ features, test results, bugfixes, etc.  Unfortunately, they're far
 too numerous to mention by name.
 
 <hr>
-<i>Last modified on February 7, 1997.</i>
+<i>Last modified on February 26, 1998.</i>
 
 <!--GH_SEARCH-->
 <!--GH_END-->
