--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -16,8 +16,8 @@ front ends.
 
 <p>Second, you must have a new version of dejagnu on your system; dejagnu-1.3
 will not work.  We have made a 
-<a href="ftp://ftp.cygnus.com/pub/egcs/infrastructure/dejagnu-971222.tar.gz">
-dejagnu snapshot</a> available in ftp.cygnus.com:/pub/egcs/infrastructure until
+<a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/dejagnu-971222.tar.gz">
+dejagnu snapshot</a> available in egcs.cygnus.com:/pub/egcs/infrastructure until
 a new version of dejagnu can be released.
 
 <p>Assuming you've got the testsuites unpacked and have installed an appropriate
