Note how to check out the release branch, particular releases and particular snapshots.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -41,19 +41,18 @@ local copy with those in the repository.  See the CVS manual for additional
 information on how to use CVS.
 
 
-
-<p> If you want to check out any specific snapshot use the
-command:
+<p> You can check out the egcs-1.0.x release branch with the following command:
 <pre>
-cvs -z 9 co -regcs_ss_yymmdd
+cvs -z 9 co -regcs_1_00_branch egcs
 </pre>
 
-<p>If you already have a tree checked out and you want to make it
-look like snapshot yymmdd you'd do:
-<pre>
-cvs -z 9 update -regcs_ss_yymmdd
-</pre>
-
+<p>By changing the "-r" argument above you can check out particular releases
+or snapshots.
+<ul>
+  <li> egcs_1_0_1_release
+  <li> egcs_1_0_release
+  <li> egcs_ss_yymmdd
+</ul>
 
 <p>Enjoy!
 
