Update mirrors. Tweak for slight reorganization of egcs web stuff (no longer pushed down ints own subdir).

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,18 +138,17 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/egcs/">ftp.ninemoons.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/ftp.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
-<li>US (California): <a href="ftp://ftp.cdrom.com/pub/egcs/">ftp.cdrom.com</a>
+<li>US (California, releases only): <a href="ftp://ftp.cdrom.com/pub/egcs/">ftp.cdrom.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/packages/gnu/cygnus/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/cygnus/egcs/">sunsite.mff.cuni.cz</a>
+<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
 <li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
-<LI>Netherlands: <A HREF="ftp://ftp.nluug.nl/languages/egcs/">ftp.nluug.nl</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 </ul>
 
@@ -183,11 +182,11 @@ to the egcs project.
    </font>
 </td>
 <td> 
-   <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs/egcs">
+   <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs">
    <INPUT NAME=query size=20>
    <INPUT TYPE=submit VALUE="Search">
-   <INPUT name=file type=hidden value="/egcs/carton/www/wwwdocs/htdocs/egcs/index.html">
-   <a href="/cgi-bin/webglimpse-fullsearch/egcs/carton/www/wwwdocs/htdocs/egcs?file=/egcs/carton/www/wwwdocs/htdocs/egcs/index.html">Search Options</a>
+   <INPUT name=file type=hidden value="/egcs/carton/www/wwwdocs/htdocs/index.html">
+   <a href="/cgi-bin/webglimpse-fullsearch/egcs/carton/www/wwwdocs/htdocs?file=/egcs/carton/www/wwwdocs/htdocs/index.html">Search Options</a>
 </td></tr>
 <tr><td colspan=2>
 Search:	
