--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -175,7 +175,7 @@ to the egcs project.
 <center>
 <table border=5><tr border=0>
 <td align=center valign=middle>
-   <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=http://egcs-www.cygnus.com/egcs/index.html/.glimpse-eye.jpg alt="WG" align=middle width=60 height=34></A>
+   <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=".glimpse-eye.jpg" alt="WG" align=middle width=60 height=34></A>
    <br>
    <font size=-3>
    <a href="http://glimpse.cs.arizona.edu/webglimpse">WebGlimpse</a>
