Quick note on dealing with conflicts in generated files.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -36,6 +36,7 @@
   <li><a href="#autoconf/bison++">Why do I need autoconf & bison</a>
   <li><a href="#aix">EGCS does not work on AIX 4.3</a>
   <li><a href="#gdb">Problems debugging egcs code</a>
+  <li><a href="#conflicts">Conflicts when using cvs update </a>
 
 </ol>
 
@@ -566,10 +567,19 @@ the current gdb-4.16 release may not be able to read such debug records.
 <p>You can either use the argument "-gstabs" instead of "-g" or pick up
 the current beta copy of gdb-4.17 to work around the problem.
 
+<hr>
+<h2><a name="conflicts">Conflicts when using cvs update</a></h2>
+<p>It is not uncommon to get cvs conflict messages for some generated files
+when updating your local sources from the CVS repository.  Typically such
+conflicts occur with bison or autoconf generated files.
+
+<p>As long as you haven't been making modifications to the generated files
+or the generator files, it is safe to delete the offending file, then run
+cvs update again to get a new copy.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  February 26, 1998</i>
+<p><i>Last modified:  February 27, 1998</i>
 
 <!--GH_SEARCH-->
 <!--GH_END-->
