small changes plus clean up some webglimpse cruft

--- a/htdocs/checkin.html
+++ b/htdocs/checkin.html
@@ -66,6 +66,10 @@ the time that the patch was submitted.  Note in the "<tt>gcc/f</tt>" and
 "<tt>libf2c</tt>" directories you should modifify <tt>ChangeLog.egcs</tt>
 instead of <tt>ChangeLog</tt>.
 
+<p>Make sure to rebuild any generated files that would be effected by
+the patch.  Make sure to check them in along with the files explicitly
+modified by the patch.
+
 <p>We recommend using "<tt>cvs diff</tt>" after applying a patch to
 a local tree.  Review the output to make sure that only the changes
 you wanted to check in will be checked in.  Also check to see if the
