--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -6,7 +6,7 @@
 <h1 align="center">egcs Frequently Asked Questions</h1>
 
 <ol>
-  <li><a href="#gcc-2-diff">How is egcs be different from gcc2?</a>
+  <li><a href="#gcc-2-diff">How is egcs different from gcc2?</a>
   <li><a href="#open-development">What is an open development model?</a>
   <li><a href="#release-fork">Releases and Forking</a>
   <li><a href="#libc-lock">bits/libc-lock.h:  No such file or directory</a>
@@ -578,7 +578,5 @@ cvs update again to get a new copy.
 <p><a href="index.html">Return to the egcs home page</a>
 <p><i>Last modified:  February 28, 1998</i>
 
-<!--GH_SEARCH-->
-<!--GH_END-->
 </body>
 </html>
