--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,7 +42,8 @@ href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 <dt><b>February 26, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by egcs project hardware and
-  are searchable with webglimpse.
+  are searchable with webglimpse.  The <a href="cvs.html"> CVS</a>
+  sources are browsable with webcvs.
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
@@ -170,31 +171,5 @@ to the egcs project.
 <hr>
 <i>Last modified on February 26, 1998.</i>
 
-<!--GH_SEARCH-->
-<hr>
-<center>
-<table border=5><tr border=0>
-<td align=center valign=middle>
-   <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=".glimpse-eye.jpg" alt="WG" align=middle width=60 height=34></A>
-   <br>
-   <font size=-3>
-   <a href="http://glimpse.cs.arizona.edu/webglimpse">WebGlimpse</a>
-   </font>
-</td>
-<td> 
-   <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs">
-   <INPUT NAME=query size=20>
-   <INPUT TYPE=submit VALUE="Search">
-   <INPUT name=file type=hidden value="/egcs/carton/www/wwwdocs/htdocs/index.html">
-   <a href="/cgi-bin/webglimpse-fullsearch/egcs/carton/www/wwwdocs/htdocs?file=/egcs/carton/www/wwwdocs/htdocs/index.html">Search Options</a>
-</td></tr>
-<tr><td colspan=2>
-Search:	
-<INPUT TYPE=radio NAME=scope VALUE=neighbor CHECKED>
-The neighborhood of this page
-<INPUT TYPE=radio NAME=scope VALUE=full>The full archive
-</td></tr></form></table></center><hr>
-
-<!--GH_END-->
 </body>
 </html>
