testing auto-checkout...

--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -28,7 +28,7 @@ This may take a long time.  Go get some lunch.
 distrubution as possible, including the C, C++ and Fortran compiler as
 well as the C++ runtime libraries.
 
-<p> How to interpret test results XXX.
+<p> How to interpret test results TBD.
 
 <hr>
 <i>Last modified on Jan 2, 1998.</i>
