testing auto-checkout...

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,7 @@ href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 <dd>
   The egcs web pages are now supported by egcs project hardware and
   are searchable with webglimpse.  The <a href="cvs.html"> CVS</a>
-  sources are browsable with webcvs.
+  sources are browsable with cvsweb.
 </dd>
 <dt><b>February 7, 1998</b></dt>
 <dd>
