Tweak mirror subdir for sunsite.doc.ic.ac.uk

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -140,7 +140,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/egcs/">ftp.ninemoons.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/ftp.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
 <li>US (California, releases only): <a href="ftp://ftp.cdrom.com/pub/egcs/">ftp.cdrom.com</a>
-<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/packages/gnu/cygnus/egcs/">sunsite.doc.ic.ac.uk</a>
+<li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
@@ -169,7 +169,7 @@ features, documentation updates, web page improvements, etc.  Look
 to the egcs project.
 
 <hr>
-<i>Last modified on February 26, 1998.</i>
+<i>Last modified on March 03, 1998.</i>
 
 </body>
 </html>
