--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -14,8 +14,9 @@ available readonly to the public at large.
 waiting for periodic snapshots.  You'll even be able to check out the
 release branch(es) since they also live in the CVS repository.
 
-<p>If you would like to browse the CVS history online via your web
-browser it is available via <a href="/cgi-bin/cvsweb">cvsweb</a>.
+<p>If you would like to <a href="/cgi-bin/cvsweb">browse the CVS
+history</a> online via your web browser it is available via <a
+href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a>.
 
 <p>If you don't already have CVS, we recommend you pick up a recent copy from
 cyclic software <a href="http://www.cyclic.com"> at http://www.cyclic.com</a>.
