null change for debugging

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -37,7 +37,6 @@
   <li><a href="#aix">EGCS does not work on AIX 4.3</a>
   <li><a href="#gdb">Problems debugging egcs code</a>
   <li><a href="#conflicts">Conflicts when using cvs update </a>
-
 </ol>
 
 <hr>
@@ -51,8 +50,7 @@ development efforts on gcc1 stopped and we all concentrated on making
 gcc2 better than gcc1 could ever be.  This is the kind of step forward
 we want to make with egcs.
 
-<p>In brief, the three biggest differences between egcs and gcc2 are
-these:  
+<p>In brief, the three biggest differences between egcs and gcc2 are:  
 
 <ul>
   <li>More rexamination of basic architectual decisions of
