Tweak stuff about snapshots.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -541,6 +541,8 @@ following commands to touch all the generated files.
 
 <pre>
 touch `find egcs -name configure -print`
+touch egcs/gcc/c-parse.y
+touch egcs/gcc/objc/objc-parse.y
 touch egcs/gcc/{cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
 touch egcs/gcc/cp/{parse.c,parse.h}
 touch egcs/gcc/objc/objc-parse.c
