Fix some www.cygnus.com references

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -29,8 +29,7 @@ C++ constructors and destructors to work right.
 
 <p><b>i?86-pc-solaris*</b><br>
 You'll need a patch to fix an egcs bug on this platform.
-<a href="http://www.cygnus.com/egcs/faq.html#x86solaris"> x86 solaris patch</a>
-
+<a href="http://www-egcs.cygnus.com/faq.html#x86solaris"> x86 solaris patch</a>
 
 <p><b>hppa*-hp-hpux*</b><br>
 We <b>highly</b> recommend using gas/binutils-2.8 on all hppa platforms; you
