put in link to webglimpse box

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,8 +42,8 @@ href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
 <dt><b>February 26, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by egcs project hardware and
-  are searchable with webglimpse.  The <a href="cvs.html"> CVS</a>
-  sources are browsable with the free <a
+  are <a href="#glimpsebox">searchable</a> with webglimpse.  The <a
+  href="cvs.html"> CVS</a> sources are browsable with the free <a
   href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a> package.
 </dd>
 <dt><b>February 7, 1998</b></dt>
@@ -170,6 +170,7 @@ features, documentation updates, web page improvements, etc.  Look
 to the egcs project.
 
 <hr>
+<name=snapshots>
 <i>Last modified on March 4, 1998.</i>
 
 </body>
