--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -170,7 +170,7 @@ features, documentation updates, web page improvements, etc.  Look
 to the egcs project.
 
 <hr>
-<name=glimpsebox>
+<name="glimpsebox">
 <i>Last modified on March 4, 1998.</i>
 
 </body>
