test use of include for glimpse boxes

--- a/htdocs/announcement.html
+++ b/htdocs/announcement.html
@@ -121,5 +121,6 @@ David Henkel-Wallace
 </pre>
 <hr>
 <a href="">Return to the egcs home page</a>
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
