finish use of manually-added search boxes

--- a/htdocs/buildstat.html
+++ b/htdocs/buildstat.html
@@ -138,5 +138,6 @@ conflicting g++ test results ont his platform.
 <p>
 <i>Last modified on December 5, 1997.</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
