--- a/htdocs/caveats.html
+++ b/htdocs/caveats.html
@@ -39,5 +39,6 @@
 <p><a href="">Return to the egcs home page</a>
 <p><i>Last modified:  January 17, 1997</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
