--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -74,5 +74,6 @@ http://www.cyclic.com</a>.
 
 <hr>
 <a href="">Return to the egcs home page</a>
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
