--- a/htdocs/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0.1.html
@@ -137,5 +137,6 @@ too numerous to mention by name.
 <hr>
 <i>Last modified on February 26, 1998.</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
