--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -578,5 +578,6 @@ cvs update again to get a new copy.
 <p><a href="index.html">Return to the egcs home page</a>
 <p><i>Last modified:  March 04, 1998</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
