--- a/htdocs/features.html
+++ b/htdocs/features.html
@@ -45,5 +45,6 @@
 <p><a href="">Return to the egcs home page</a>
 <p><i>Last modified:  December 8, 1997</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
