--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -173,5 +173,6 @@ to the egcs project.
 <a name="glimpsebox"></a>
 <i>Last modified on March 4, 1998.</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
