--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -125,5 +125,6 @@ exception handling
 <hr>
 <i>Last modified on February 7, 1998.</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
