--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -33,5 +33,6 @@ well as the C++ runtime libraries.
 <hr>
 <i>Last modified on Jan 2, 1998.</i>
 
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
