--- a/htdocs/fsf-forms/assignment-instructions.html
+++ b/htdocs/fsf-forms/assignment-instructions.html
@@ -80,5 +80,6 @@ via email.
 <a href="assign.changes"><b>The assignment form text</b></a>
 <br><a href="/egcs/">Return to the egcs web page</a>
 <br><i>Last update: August 28, 1997</i>
+<!--#include virtual="/glimpsebox.html"-->
 </body>
 </html>
