--- a/htdocs/announcement.html
+++ b/htdocs/announcement.html
@@ -84,7 +84,7 @@ That list is under majordomo.
 
 We have a web page that describes the various mailing lists and has
 this information at: <a
-href="http://egcs-www.cygnus.com/">http://egcs-www.cygnus.com</a>.
+href="http://www.cygnus.com/egcs">http://www.cygnus.com/egcs</a>.
 
 Alternatively, look for these releases as they spread through other
 projects such as RTEMS, Linux, etc.
