Add cpu32 stuff.

--- a/htdocs/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0.2.html
@@ -31,6 +31,7 @@ serious problems in egcs-1.0.1.
   <li> Various exception handling fixes, including fixing EH on NetBSD ports.
   <li> Several changes to collect2 to fix many problems with AIX.
   <li> x86 ports define i386 again to keep imake happy.
+  <li> m68k port support includes -mcpu32 option as well as cpu32 multilibs. 
   <li> Fix loop optimization bug exposed by rs6000/ppc port.
   <li> Define __ELF__ for rs6000/linux.
   <li> Fix -mcall-linux problem on rs6000/linux.
