Tweaks suggested by Joe Buck.

--- a/htdocs/caveats.html
+++ b/htdocs/caveats.html
@@ -33,7 +33,8 @@
   which was previously valid (and thus accepted by other compilers and older
   versions of g++) may no longer be accepted.
 
-  <li>egcs-1.0 may not work with Red Hat Linux 5.0 on all targets.
+  <li>egcs-1.0 may not work with Red Hat Linux 5.0 on all targets.  egcs-1.0.x
+  and later releases should work with Red Hat Linux 5.0.
 </ul>
 
 <p><a href="">Return to the egcs home page</a>
