--- a/htdocs/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0.2.html
@@ -13,7 +13,7 @@
 an open development model to accelerate development and testing of GNU
 compilers and runtime libraries.
 
-<p>egcs-1.0.2 is a minor update to the egcs-1.0.1 compiler to fix a several
+<p>egcs-1.0.2 is a minor update to the egcs-1.0.1 compiler to fix several
 serious problems in egcs-1.0.1.
 
 <ul>
@@ -48,7 +48,7 @@ serious problems in egcs-1.0.1.
   <li> Fixes for Fortran builds on cygwin32/mingw32.
   <li> Fix problem with static linking on sco5.
   <li> Fix bootstrap on sco5 with native compiler.
-  <li> Fix compiler abort for very log thunk names.
+  <li> Fix compiler abort for very long thunk names.
   <li> Fix fixincludes handling of math.h on SunOS.
   <li> Fix some undefined symbol problems in dwarf1 debug support.
   <li> Fix to avoid potential code generation problems in jump.c.
