Fix spelling error.

--- a/htdocs/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0.2.html
@@ -20,7 +20,7 @@ serious problems in egcs-1.0.1.
   <li> Memory comsumption significantly reduced, especially for templates
        and inline functions.
   <li> libstdc++ in the egcs release has been updated and should be link
-       compatable with libstdc++-2.8.
+       compatible with libstdc++-2.8.
   <li> Various libio fixes to work better with Linux.
   <li> Fix problems with duplicate symbols on systems that do not
        support weak symbols, particularly in libstdc++.
