--- a/htdocs/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0.2.html
@@ -63,7 +63,7 @@ serious problems in egcs-1.0.1.
      <li> Allow egcs to build on irix5 without the gnu assembler.
      <li> Fix problem with static linking on sco5.
      <li> Fix bootstrap on sco5 with native compiler.
-     <li> Fix for abort building newlib on H8 series.
+     <li> Fix for abort building newlib on H8 target.
      <li> Fix fixincludes handling of math.h on SunOS.
   </ul>
 </ul>
@@ -123,7 +123,7 @@ features, test results, bugfixes, etc.  Unfortunately, they're far
 too numerous to mention by name.
 
 <hr>
-<i>Last modified on March 10, 1998.</i>
+<i>Last modified on March 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
