Add another fix.

--- a/htdocs/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0.2.html
@@ -65,6 +65,7 @@ serious problems in egcs-1.0.1.
      <li> Fix bootstrap on sco5 with native compiler.
      <li> Fix for abort building newlib on H8 target.
      <li> Fix fixincludes handling of math.h on SunOS.
+     <li> Minor fix for motorola 3300 m68k systems.
   </ul>
 </ul>
 
