--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -138,7 +138,7 @@ if you are mirroring the egcs pages so we can note it here!
 <ul>
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
-<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/egcs/">ftp.ninemoons.com</a>
+<li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/ftp.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
 <li>US (California, releases only): <a href="ftp://ftp.cdrom.com/pub/egcs/">ftp.cdrom.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
