--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -32,13 +32,17 @@ ultimate inclusion into the gcc2 tree.
 <p>We will provide regular, high quality <a
 href="#releases">releases</a>. We want those releases to work well on
 a variety of native (including linux) and cross targets.  <a
-href="egcs-1.0.1.html"> egcs-1.0.1</a> is the current release.
+href="egcs-1.0.2.html"> egcs-1.0.2</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>March 18, 1998</b></dt>
+<dd>
+  <a href="egcs-1.0.2.html"> <b>egcs-1.0.2 released!</b></a>.
+</dd>
 <dt><b>February 26, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by egcs project hardware and
@@ -139,8 +143,6 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
-<li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/ftp.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
-<li>US (California, releases only): <a href="ftp://ftp.cdrom.com/pub/egcs/">ftp.cdrom.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
@@ -171,7 +173,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 4, 1998.</i>
+<i>Last modified on March 18, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
