--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -37,6 +37,7 @@
   <li><a href="#aix">EGCS does not work on AIX 4.3</a>
   <li><a href="#gdb">Problems debugging egcs code</a>
   <li><a href="#conflicts">Conflicts when using cvs update </a>
+  <li><a href="#gnat">Using egcs with GNAT/Ada</a>
 </ol>
 
 <hr>
@@ -575,8 +576,21 @@ or the generator files, it is safe to delete the offending file, then run
 cvs update again to get a new copy.
 
 <hr>
+<h2><a name="gnat">Using egcs with GNAT/Ada </a></h2>
+<p>The GNU Ada front-end is not currently supported by egcs; however, it is
+possible to build the GNAT compiler with a little work.
+
+<p>First, retrieve the gnat-3.10p sources.  The sources for the Ada front
+end and runtime all live in the "ada" subdirectory.  Move that subdirectory
+to egcs/gcc/ada.
+
+<p>Second, apply the patch found in egcs/gcc/README.gnat.
+
+<p>Finally, rebuild per the GNAT build instructions.
+
+<hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  March 04, 1998</i>
+<p><i>Last modified:  March 19, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
