--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -544,9 +544,9 @@ following commands to touch all the generated files.
 touch `find egcs -name configure -print`
 touch egcs/gcc/c-parse.y
 touch egcs/gcc/objc/objc-parse.y
-touch `find egcs-$date/texinfo -name Makefile.in -print`
-touch `find egcs-$date/texinfo -name \*.pot -print`
-touch `find egcs-$date/texinfo -name \*.gmo -print`
+touch `find egcs/texinfo -name Makefile.in -print`
+touch `find egcs/texinfo -name \*.pot -print`
+touch `find egcs/texinfo -name \*.gmo -print`
 touch egcs/gcc/{cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
 touch egcs/gcc/cp/{parse.c,parse.h}
 touch egcs/gcc/objc/objc-parse.c
