--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -126,6 +126,17 @@ to mess with snapshots, you should definitely be subscribed to the
 <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
 egcs.cygnus.com:/pub/egcs/snapshots</a>.
 
+<p>Note at times you may find newer directories on the server with limited
+permissions.  These represent snapshots that have not yet been verified
+as correct, or are known to be incorrect.
+
+<p>When a particular snapshot is ready for public consumption the directory
+permissions are relaxed, the LATEST-IS- file is updated and a message is
+sent to the egcs list.
+
+<p>Using a snapshot before it's officially made available is an unwise thing
+to do since it may become impossible to update to an official snapshot.
+
 <h2><a name="releases">RELEASES</h2>
 
 <p>Releases are available from <a
@@ -174,7 +185,7 @@ to the egcs project.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on March 20, 1998.</i>
+<i>Last modified on April 06, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
