Tweak "generated_files" section.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -41,7 +41,7 @@ reply with "anoncvs".
 local copy with those in the repository.  See the CVS manual for additional
 information on how to use CVS.
 
-<p>We recommend you read the <a href="faq.html#autoconf/bison++"> 
+<p>We recommend you read the <a href="faq.html#generated_files"> 
 FAQ entry regarding additional tools you may need when building from CVS
 sources </a>
 
@@ -73,7 +73,7 @@ http://www.cyclic.com</a>.
 
 
 <hr>
-<i>Last modified on April 06, 1998.</i>
+<i>Last modified on April 09, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
