--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -33,7 +33,7 @@
   <li><a href="#kde">EGCS will not build KDE</a>
   <li><a href="#friend">Friend Templates</a>
   <li><a href="#libg++">Where to find libg++</a>
-  <li><a href="#autoconf/bison++">Why do I need autoconf & bison</a>
+  <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc </a>
   <li><a href="#aix">EGCS does not work on AIX 4.3</a>
   <li><a href="#gdb">Problems debugging egcs code</a>
   <li><a href="#conflicts">Conflicts when using cvs update </a>
@@ -528,17 +528,17 @@ from <a href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz">
 ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1-980119.tar.gz</a>
 
 <hr>
-<h2> <a name="autoconf/bison++">Why do I need autoconf/bison<a></h2>
+<h2> <a name="generated_files/">autoconf, bison, xgettext, automake, etc<a></h2>
 <p>If you're using diffs up dated from one snapshot to the next, or
-if you're using the CVS repository, you may need autoconf, bison, or
-possibly other tools to rebuild egcs.
+if you're using the CVS repository, you may need several additional programs
+to build egcs.
+
+<p> These include, but are not necessarily limited to autoconf, automake,
+bison, and xgettext.
 
 <p>This is necessary because neither diff nor cvs keep timestamps
-correct.  So it is possible for "make" to think a generated file is
-out of date.
-
-<p>If you do not have autoconf, bison, etc, then you can issue the
-following commands to touch all the generated files.
+correct.  This causes problems for generates files as "make" may think
+those generated files are out of date and try to regenerate them.
 
 <pre>
 touch `find egcs -name configure -print`
@@ -591,7 +591,7 @@ to egcs/gcc/ada.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 06, 1998</i>
+<p><i>Last modified:  April 09, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
