Note location of gnu pascal.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -38,6 +38,7 @@
   <li><a href="#gdb">Problems debugging egcs code</a>
   <li><a href="#conflicts">Conflicts when using cvs update </a>
   <li><a href="#gnat">Using egcs with GNAT/Ada</a>
+  <li><a href="#gpc">Using egcs with GNU Pascal</a>
 </ol>
 
 <hr>
@@ -590,8 +591,13 @@ to egcs/gcc/ada.
 <p>Finally, rebuild per the GNAT build instructions.
 
 <hr>
+<h2><a name="gpc">Using egcs with GNU Pascal </a></h2>
+<p>The <a href="http://home.pages.de/~GNU-Pascal"> GNU Pascal </a>
+front-end is not currently supported by egcs.
+
+<hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 09, 1998</i>
+<p><i>Last modified:  April 15, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
