Note egcs_latest_snapshot stuff.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -51,11 +51,13 @@ cvs -z 9 co -regcs_1_00_branch egcs
 </pre>
 
 <p>By changing the "-r" argument above you can check out particular releases
-or snapshots.
+or snapshots or the latest snapshot.
 <ul>
+  <li> egcs_1_0_2_release
   <li> egcs_1_0_1_release
   <li> egcs_1_0_release
   <li> egcs_ss_yymmdd
+  <li> egcs_latest_snapshot
 </ul>
 
 <p>Enjoy!
@@ -73,7 +75,7 @@ http://www.cyclic.com</a>.
 
 
 <hr>
-<i>Last modified on April 09, 1998.</i>
+<i>Last modified on April 23, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
