--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -39,6 +39,7 @@
   <li><a href="#conflicts">Conflicts when using cvs update </a>
   <li><a href="#gnat">Using egcs with GNAT/Ada</a>
   <li><a href="#gpc">Using egcs with GNU Pascal</a>
+  <li><a href="#cvssnapshots">Using CVS to download snapshots </a>
 </ol>
 
 <hr>
@@ -596,8 +597,17 @@ to egcs/gcc/ada.
 front-end is not currently supported by egcs.
 
 <hr>
+<h2><a name="cvssnapshots">Using CVS to download snapshots</a></h2>
+<p>It is possible to checkout specific snapshots with CVS or to check
+out the latest snapshot.
+
+<p>We use cvs tags to identify each snapshot we make.  Snapshot tags have
+the form "egcs_ss_<date>".  The latest official snapshot always has the
+tag "egcs_latest_snapshot".
+
+<hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  April 15, 1998</i>
+<p><i>Last modified:  April 23, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
