Fix typo: Stanards -> Standards.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -13,7 +13,7 @@
 
   <dd>All contributions must conform to the <a
   href="http://www.gnu.ai.mit.edu/prep/standards_toc.html"> GNU Coding
-  Stanards</a>.  Submissions which do not conform to the standards will
+  Standards</a>.  Submissions which do not conform to the standards will
   be returned with a request to reformat the changes.<p>
   </dd>
 
@@ -85,7 +85,7 @@
 </dl>
 
 <hr>
-<i>Last modified on November 25, 1997.</i>
+<i>Last modified on April 28, 1998.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
